Wed Jun  9 15:57:57 1999  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* rs6000.md (movsi_got_internal_mem): Delete.
	* rs6000.h (CONDITIONAL_REGISTER_USAGE): Mark PIC_OFFSET_TABLE_REGNUM.
	(GOT_TOC_REGNUM): Delete.
	(PIC_OFFSET_TABLE_REGNUM): Define.
	(FINALIZE_PIC): Disable.
	* rs6000.c (rs6000_got_register): New code for fixed pic register.
	(rs6000_replace_regno): Delete.
	(rs6000_finalize_pic): Likewise.
	(output_prolog): Handle PIC_OFFSET_TABLE_REGNUM.

Wed Jun  9 19:44:26 1999  J"orn Rennecke <amylaar@cygnus.co.uk>

	* loop.c (loop_insn_first_p): Don't compare LUIDs when P
	is a note; use <= for the compare; advance P while it is
	a NOTE.

Wed Jun  9 13:12:24 1999  Jeffrey A Law  (law@cygnus.com)

	* fixinc/inclhack.def (no_double_slash): Fix quoting for test.
	* fixinc/inclhack.sh, fixinc/fixincl.x, fixinc/fixincl.sh; Rebuilt.

        * varasm.c (remove_from_pending_weak_list): Verify t->name
        is non-NULL before passing it to strcmp.

Wed Jun  9 23:01:17 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* invoke.texi: Add C4x invocation docs.

Wed Jun  9 22:42:49 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.h (TARGET_EXPOSE_LDP, LEGITIMIZE_RELOAD_ADDRESS):
	Define new macros. 
	* config/c4x/c4x.c (c4x_emit_move_sequence, src_operand): Use
	TARGET_EXPOSE_LDP.
	(c4x_legitimize_reload_address): New function.
	* config/c4x/c4x.md: Update docs.

Wed Jun  9 06:50 1999  Bruce Korb <ddsinc09@ix.netcom.com>

	*fixinc/inclhack.def(sun_auth_proto): bypass the patch if
	the typed arguments are not part of a comment
	(ioctl_fix_ctrl): Added a purpose comment
	*fixinc/fixincl.x: regenerate
	*fixinc/inclhack.sh: regenerate

Wed Jun  9 04:14:48 1999  Jeffrey A Law  (law@cygnus.com)

	* fixincludes: Avoid removing '.'.
	* fixinc/fixinc.svr4: Likewise.
	* fixinc/fixinc.winnt: Likewise.
	* fixinc/inclhack.tpl: Likewise.
	* fixinc/fixincl.sh, fixinc/inclhack.sh: Rebuilt.

Wed Jun  9 03:55:34 1999  Jim Wilson <wilson@cygnus.com>
